...
export function HeavyScreen({navigation, route}) {
  const {type} = route.params;

  return (
    <View style={{flex: 1}}>
      <Button onPress={() => navigation.push('tests-menu')}>
        Navigate to tests
      </Button>
      <HeavyScreenContent type={type} />
    </View>
  );
}

...
