appId: com.newarchperfexample
---
- launchApp
- tapOn: "Non-Virtualized heavy"
- tapOn: "Navigate to tests"
- tapOn: "Native navigation"
