appId: com.newarchperfexample
---
- launchApp
- tapOn: "Virtualized heavy"
- tapOn: "Navigate to tests"
- tapOn: "Native navigation"
